# fake-railway-sys

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: App.cpp  CMakeLists.txt  PopupMessage.cpp  PopupMessage.h  RailwaySystem.cpp  RailwaySystem.h  app.cpp  backendpage.cpp  backendpage.h  databasemanager.cpp  databasemanager.h  dbmanager.cpp  dbmanager.h  loginpage.cpp  loginpage.h  mainpage.cpp  mainpage.h  popupmessage.cpp  popupmessage.h  querypage.cpp  querypage.h  railwaysystem.cpp  railwaysystem.h  userpage.cpp  userpage.h
src/assets/: app.qrc
src/assets/qss/: login.qss  main.qss
src/assets/sql/: sample.sql  schema.sql
src/ui/: backendpage.h  loginpage.h  mainpage.h  querypage.h  railwaysystem.h  userpage.h
